--- a/example/components/button/docs.mdx
+++ b/example/components/button/docs.mdx
@@ -2,4 +2,10 @@
 componentName: 'Button'
 ---
 
-hi there!
+This is the docs for the button component
+
+<LiveComponent>{`<Button text='this is a button' />`}</LiveComponent>
+
+<KnobsComponent knobs={componentProps} />
+
+<PropsTable props={componentProps} />
