remove unneeded option, add user-defined component

--- a/example/components/button/docs.mdx
+++ b/example/components/button/docs.mdx
@@ -9,3 +9,5 @@ This is the docs for the button component
 <KnobsComponent knobs={componentProps} />
 
 <PropsTable props={componentProps} />
+
+<Tester />
