--- a/example/components/button/docs.mdx
+++ b/example/components/button/docs.mdx
@@ -4,9 +4,10 @@ componentName: 'Button'
 
 This is the docs for the button component
 
-<LiveComponent
-  components={{ Test: () => <p>test successful</p> }}
->{`<><Button text='this is a button' /><Test /></>`}</LiveComponent>
+<LiveComponent components={{ Test: () => <p>test successful</p> }}>{`<>
+  <Button text='this is a button' />
+  <Test />
+</>`}</LiveComponent>
 
 <PropsTable props={componentProps} />
 
