Expose package.json in components' docs page scopes

--- a/example/components/button/docs.mdx
+++ b/example/components/button/docs.mdx
@@ -12,3 +12,9 @@ This is the docs for the button component
 <PropsTable props={componentProps} />
 
 <Tester />
+
+## Exposed `package.json`
+
+<pre>
+  <code>{JSON.stringify(packageJson, null, 2)}</code>
+</pre>
