--- a/examples/basic/components/button/docs.mdx
+++ b/examples/basic/components/button/docs.mdx
@@ -6,7 +6,7 @@ This is the docs for the button component
 
 <LiveComponent components={{ Test: () => <p>test successful</p> }}>{`<>
   <Button text='this is a button' />
-  <ButtonSecondary text='this is another button' />
+  <ButtonSecondary text='${foo}' />
   <Test />
 </>`}</LiveComponent>
 
