--- a/examples/peer-components/components/blue-button/docs.mdx
+++ b/examples/peer-components/components/blue-button/docs.mdx
@@ -4,10 +4,12 @@ componentName: 'BlueButton'
 
 This is the docs for the button component
 
-<LiveComponent components={{ Test: () => <p>test successful</p> }}>{`<>
+<LiveComponent components={{ Test: () => <p>test successful</p> }}>
+  {`<>
   <BlueButton text='this is a button' />
   <Test />
-</>`}</LiveComponent>
+</>`}
+</LiveComponent>
 
 <PropsTable props={componentProps} />
 
