Prop assignment based on Props.ts

--- a/examples/basic/components/link/docs.mdx
+++ b/examples/basic/components/link/docs.mdx
@@ -9,13 +9,4 @@ This is the docs for the Link component
   {`<Link href="https://hashicorp.com" text='this is a link' />`}
 </LiveComponent>
 
-<PropsTable
-  props={{
-    text: { type: 'string', description: 'link text', required: true },
-    href: {
-      type: 'string',
-      description: 'link href',
-      required: true,
-    },
-  }}
-/>
+<PropsTable props={componentProps} />
