adds basic theme support

--- a/examples/basic/components/button/docs.mdx
+++ b/examples/basic/components/button/docs.mdx
@@ -1,9 +1,12 @@
+---
+description: The button is used widely across HashiCorp properties, and has many ways it can be customized. Let's start with its most basic form.
+---
 import { Button } from '.'
 
 export const Simple = () => (<Button>Click me</Button>)
 
 # Button
 
-## Simplee
+## Simple
 
 <Simple />
