--- a/examples/basic/components/card/docs.mdx
+++ b/examples/basic/components/card/docs.mdx
@@ -8,6 +8,8 @@ import { Button } from '../button'
 
 ## Basic
 
+<Note>This is a very important note</Note>
+
 <Card>
   <div>Hello there</div>
   <Button>Yo</Button>
