Add custom component to example

--- a/examples/basic/app/(swingset)/swingset/content.mdx
+++ b/examples/basic/app/(swingset)/swingset/content.mdx
@@ -57,7 +57,9 @@ export default withSwingset({
 
 ### Integrates with `@next/mdx`
 
-Swingset integrates with `@next/mdx` by supporting the same `mdx-components.ts` file at the root of your application. Swingset will make the custom components declared there available.
+Swingset integrates with `@next/mdx` by supporting the same `mdx-components.ts` file at the root of your application. Swingset will make the custom components declared there available. Example:
+
+<Note>I'm a custom component from `mdx-components.js`</Note>
 
 ### Use with Storybook
 
