--- a/examples/basic/components/button/docs.mdx
+++ b/examples/basic/components/button/docs.mdx
@@ -5,6 +5,10 @@ import { Button } from '.'
 
 export const Simple = () => (<Button>Click me</Button>)
 
+* [x] Make Button
+* [ ] ???
+* [ ] profit
+
 ## Simple
 
 <Simple />
