Use title from frontmatter in categories data, if defined

--- a/examples/basic/components/button/docs.mdx
+++ b/examples/basic/components/button/docs.mdx
@@ -1,4 +1,5 @@
 ---
+title: 'Button'
 description: The button is used widely across HashiCorp properties, and has many ways it can be customized. Let's start with its most basic form.
 ---
 import { Button } from '.'
