--- a/examples/basic/app/(swingset)/swingset/content.mdx
+++ b/examples/basic/app/(swingset)/swingset/content.mdx
@@ -36,7 +36,7 @@ components/
     index.tsx
 ```
 
-#### Componet prop extraction
+#### Component prop extraction
 
 Swingset automatically exposes prop metadata for components imported into your documentation.
 
