--- a/examples/basic/components/card/docs.mdx
+++ b/examples/basic/components/card/docs.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Card'
 description: A container for all sorts of things.
-category: "content"
+path: "Content/Card"
 ---
 
 import { Card } from '.'
