--- a/examples/basic/app/(swingset)/swingset/content.mdx
+++ b/examples/basic/app/(swingset)/swingset/content.mdx
@@ -1,6 +1,6 @@
 import { Button } from 'components/button'
 
-# Swingset!
+# Welcome to Swingset!
 
 Welcome to Swingset. Swingset is a drop-in component documentation system built for Next.js's App Router and React Server Components.
 
